--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
@@ -39,5 +39,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'joda-time:joda-time:2.10.6'
+    implementation 'org.mockito:mockito-android:3.5.15'
 
 }
