--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
@@ -46,7 +49,6 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.2.0-alpha06"
     implementation "com.github.bumptech.glide:glide:4.11.0"
     implementation 'joda-time:joda-time:2.10.6'
-    implementation 'org.mockito:mockito-android:3.5.15'
     implementation 'com.google.dagger:dagger:2.15'
     kapt 'com.google.dagger:dagger-compiler:2.15'
     implementation 'com.google.dagger:dagger-android:2.15'
